tests/baselines/reference/staticClassProps.errors.txt
==== tests/cases/compiler/staticClassProps.ts (2 errors) ====
    class C
    {
        public foo() {
            static z = 1;
            ~~~~~~
!!! error TS1008: Unexpected token; 'statement' expected.
        }
    }
    ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    
    